--- a/main.html
+++ b/main.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1> Welcome to GIT</h1>
+        <h2> Git changes test</h2>
+        <h3>test3</h3>
     
     </body>
     </html>
